==> nguyenkhue2608/STM32_Device_Lib/display/ssd1306/ssd1306.c <==
#include "ssd1306.h"
#define ABS(x)   ((x) > 0 ? (x) : -(x))

static void SSD1306_I2C_WriteMulti(SSD1306_Device* SSD1306, uint8_t address, uint8_t reg, uint8_t* data, uint16_t count) 
{
	uint8_t TxBuff[256];
	TxBuff[0] = reg;
	for(int i = 0; i < count; i++)
	{
		TxBuff[i+1] = data[i];
	}
	HAL_I2C_Master_Transmit(SSD1306->I2C, address, TxBuff, count+1, 10);
}

static void SSD1306_I2C_Write(SSD1306_Device* SSD1306, uint8_t address, uint8_t reg, uint8_t data)
{
	uint8_t TxBuff[2];
	TxBuff[0] = reg;
	TxBuff[1] = data;
	HAL_I2C_Master_Transmit(SSD1306->I2C, address, TxBuff, 2, 10);
}

void SSD1306_ScrollRight(SSD1306_Device* SSD1306, uint8_t start_row, uint8_t end_row)
{
  SSD1306_WriteCmd(SSD1306,SSD1306_RIGHT_HORIZONTAL_SCROLL);  // send 0x26
  SSD1306_WriteCmd(SSD1306,0x00);  // send dummy
  SSD1306_WriteCmd(SSD1306,start_row);  // start page address
  SSD1306_WriteCmd(SSD1306,0X00);  // time interval 5 frames
  SSD1306_WriteCmd(SSD1306,end_row);  // end page address
  SSD1306_WriteCmd(SSD1306,0X00);
  SSD1306_WriteCmd(SSD1306,0XFF);
  SSD1306_WriteCmd(SSD1306,SSD1306_ACTIVATE_SCROLL); // start scroll
}

void SSD1306_ScrollLeft(SSD1306_Device* SSD1306, uint8_t start_row, uint8_t end_row)
{
  SSD1306_WriteCmd(SSD1306,SSD1306_LEFT_HORIZONTAL_SCROLL);  // send 0x26
  SSD1306_WriteCmd(SSD1306,0x00);  // send dummy
  SSD1306_WriteCmd(SSD1306,start_row);  // start page address
  SSD1306_WriteCmd(SSD1306,0X00);  // time interval 5 frames
  SSD1306_WriteCmd(SSD1306,end_row);  // end page address
  SSD1306_WriteCmd(SSD1306,0X00);
  SSD1306_WriteCmd(SSD1306,0XFF);
  SSD1306_WriteCmd(SSD1306,SSD1306_ACTIVATE_SCROLL); // start scroll
}

void SSD1306_Scrolldiagright(SSD1306_Device* SSD1306, uint8_t start_row, uint8_t end_row)
{
  SSD1306_WriteCmd(SSD1306,SSD1306_SET_VERTICAL_SCROLL_AREA);  // sect the area
  SSD1306_WriteCmd(SSD1306,0x00);   // write dummy
  SSD1306_WriteCmd(SSD1306,SSD1306_HEIGHT);

  SSD1306_WriteCmd(SSD1306,SSD1306_VERTICAL_AND_RIGHT_HORIZONTAL_SCROLL);
  SSD1306_WriteCmd(SSD1306,0x00);
  SSD1306_WriteCmd(SSD1306,start_row);
  SSD1306_WriteCmd(SSD1306,0X00);
  SSD1306_WriteCmd(SSD1306,end_row);
  SSD1306_WriteCmd(SSD1306,0x01);
  SSD1306_WriteCmd(SSD1306,SSD1306_ACTIVATE_SCROLL);
}

void SSD1306_Scrolldiagleft(SSD1306_Device* SSD1306, uint8_t start_row, uint8_t end_row)
{
  SSD1306_WriteCmd(SSD1306,SSD1306_SET_VERTICAL_SCROLL_AREA);  // sect the area
  SSD1306_WriteCmd(SSD1306,0x00);   // write dummy
  SSD1306_WriteCmd(SSD1306,SSD1306_HEIGHT);

  SSD1306_WriteCmd(SSD1306,SSD1306_VERTICAL_AND_LEFT_HORIZONTAL_SCROLL);
  SSD1306_WriteCmd(SSD1306,0x00);
  SSD1306_WriteCmd(SSD1306,start_row);
  SSD1306_WriteCmd(SSD1306,0X00);
  SSD1306_WriteCmd(SSD1306,end_row);
  SSD1306_WriteCmd(SSD1306,0x01);
  SSD1306_WriteCmd(SSD1306,SSD1306_ACTIVATE_SCROLL);
}

void SSD1306_Stopscroll(SSD1306_Device* SSD1306)
{
	SSD1306_WriteCmd(SSD1306,SSD1306_DEACTIVATE_SCROLL);
}

void SSD1306_InvertDisplay(SSD1306_Device* SSD1306, int i)
{
  if(i) SSD1306_WriteCmd(SSD1306,SSD1306_INVERTDISPLAY);
  else SSD1306_WriteCmd(SSD1306,SSD1306_NORMALDISPLAY);
}

void SSD1306_DrawBitmap(SSD1306_Device* SSD1306, int16_t x, int16_t y, const unsigned char* bitmap, int16_t w, int16_t h, SSD1306_COLOR_t color)
{

    int16_t byteWidth = (w + 7) / 8; // Bitmap scanline pad = whole byte
    uint8_t byte = 0;

    for(int16_t j=0; j<h; j++, y++)
    {
        for(int16_t i=0; i<w; i++)
        {
            if(i & 7)
            {
               byte <<= 1;
            }
            else
            {
               byte = (*(const unsigned char *)(&bitmap[j * byteWidth + i / 8]));
            }
            if(byte & 0x80) SSD1306_DrawPixel(SSD1306, x+i, y, color);
        }
    }
}

void SSD1306_UpdateScreen(SSD1306_Device* SSD1306) 
{
	uint8_t m;	
	for (m = 0; m < 8; m++) {
		SSD1306_WriteCmd(SSD1306,0xB0 + m);
		SSD1306_WriteCmd(SSD1306,0x00);
		SSD1306_WriteCmd(SSD1306,0x10);
		
		/* Write multi data */
		SSD1306_I2C_WriteMulti(SSD1306, SSD1306_I2C_ADDR, 0x40, &SSD1306->SSD1306_Buffer[SSD1306_WIDTH * m], SSD1306_WIDTH);
	}
}

char SSD1306_Putc(SSD1306_Device* SSD1306, char ch, FontDef_t* Font, SSD1306_COLOR_t color) 
{
	uint32_t i, b, j;
	
	/* Check available space in LCD */
	if(SSD1306_WIDTH <= (SSD1306->CurrentX + Font->FontWidth) || SSD1306_HEIGHT <= (SSD1306->CurrentY + Font->FontHeight)) 
	{
		/* Error */
		return 0;
	}
	/* Go through font */
	for (i = 0; i < Font->FontHeight; i++) 
	{
		b = Font->data[(ch - 32) * Font->FontHeight + i];
		for (j = 0; j < Font->FontWidth; j++) 
		{
			if ((b << j) & 0x8000) 
			{
				SSD1306_DrawPixel(SSD1306, SSD1306->CurrentX + j, (SSD1306->CurrentY + i), (SSD1306_COLOR_t) color);
			} 
			else 
			{
				SSD1306_DrawPixel(SSD1306, SSD1306->CurrentX + j, (SSD1306->CurrentY + i), (SSD1306_COLOR_t)!color);
			}
		}
	}
	
	/* Increase pointer */
	SSD1306->CurrentX += Font->FontWidth;
	/* Return character written */
	return ch;
}

char SSD1306_Puts(SSD1306_Device* SSD1306, char* str, FontDef_t* Font, SSD1306_COLOR_t color) {
	/* Write characters */
	while (*str) {
		/* Write character by character */
		if (SSD1306_Putc(SSD1306, *str, Font, color) != *str) {
			/* Return error */
			return *str;
		}
		
		/* Increase string pointer */
		str++;
	}
	
	/* Everything OK, zero should be returned */
	return *str;
}

void SSD1306_ON(SSD1306_Device* SSD1306) 
{
	SSD1306_WriteCmd(SSD1306,0x8D);  
	SSD1306_WriteCmd(SSD1306,0x14);  
	SSD1306_WriteCmd(SSD1306,0xAF);  
}

void SSD1306_OFF(SSD1306_Device* SSD1306) 
{
	SSD1306_WriteCmd(SSD1306,0x8D);  
	SSD1306_WriteCmd(SSD1306,0x10);
	SSD1306_WriteCmd(SSD1306,0xAE);  
}
